@startuml

title __CONTROLLERS's Class Diagram__\n

  namespace vera {
    namespace controllers {
      class vera.controllers.AdminController {
          ~ tempIdU : long
          + backup()
          + deviceOff()
          + deviceOn()
          + listPage()
          + main()
          + requestAdd()
          + requestAddPost()
          + requestDone()
          + restore()
          + restoreAdmin()
          + restoreUser()
          + tariffAdd()
          + tariffAddPost()
          + tariffDelete()
          + tariffEdit()
          + tariffEditPost()
          + userDelete()
          + userDeviceEdit()
          + userDeviceEditPost()
          + userEdit()
          + userEditPost()
          + userPage()
          + workerAdd()
          + workerAddPost()
          + workerDelete()
          + workerEdit()
          + workerEditPost()
      }
    }
  }
  

  namespace vera {
    namespace controllers {
      class vera.controllers.GeneralController {
          + main()
      }
    }
  }
  

  namespace vera {
    namespace controllers {
      class vera.controllers.RegisterController {
          - passwordEncoder : PasswordEncoder
          + RegisterController()
          + processRegistration()
          + registerForm()
      }
    }
  }
  

  namespace vera {
    namespace controllers {
      class vera.controllers.UserController {
          ~ after : Date
          ~ before : Date
          ~ counterSeconds : Integer
          ~ current : Thread
          ~ electricity : Double
          ~ nImpl : Integer
          ~ waluasity : Double
          + electricityStart()
          + electricityStop()
          + main()
          + run()
      }
    }
  }
  

  namespace vera {
    namespace controllers {
      class vera.controllers.WorkerController {
          + editService()
          + editServicePost()
          + editWorkerData()
          + editWorkerDataPost()
          + main()
          + services()
          + services()
      }
    }
  }
  

  vera.controllers.AdminController o-- vera.repo.AdminRepo : adminRepo
  vera.controllers.AdminController o-- vera.repo.DeviceRepo : deviceRepo
  vera.controllers.AdminController o-- vera.repo.IndicationRepo : indicationRepo
  vera.controllers.AdminController o-- vera.repo.PaidUpTariffsRepo : paidUpTariffsRepo
  vera.controllers.AdminController o-- vera.repo.RequestRepo : requestRepo
  vera.controllers.AdminController o-- vera.repo.ServiceRepo : serviceRepo
  vera.controllers.AdminController o-- vera.repo.TariffRepo : tariffRepo
  vera.controllers.AdminController o-- vera.repo.UserAuthoritiesRepo : userAuthoritiesRepo
  vera.controllers.AdminController o-- vera.repo.UserRepo : userRepo
  vera.controllers.AdminController o-- vera.repo.WorkerRepo : workerRepo
  vera.controllers.RegisterController o-- vera.repo.UserAuthoritiesRepo : userAuthoritiesRepo
  vera.controllers.RegisterController o-- vera.repo.UserRepo : userRepo
  vera.controllers.RegisterController o-- vera.repo.WorkerRepo : workerRepo
  vera.controllers.UserController o-- vera.repo.TariffRepo : tariffRepo
  vera.controllers.UserController o-- vera.models.User : user
  vera.controllers.UserController o-- vera.repo.UserRepo : userRepo
  vera.controllers.WorkerController o-- vera.repo.DeviceRepo : deviceRepo
  vera.controllers.WorkerController o-- vera.repo.ServiceRepo : serviceRepo
  vera.controllers.WorkerController o-- vera.repo.UserRepo : userRepo
  vera.controllers.WorkerController o-- vera.models.Worker : worker
  vera.controllers.WorkerController o-- vera.repo.WorkerRepo : workerRepo


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
